-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2024-12-29T16:37:21.293Z

CREATE TABLE "bk_siakad_users" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
  "uuid" varchar(255) UNIQUE PRIMARY KEY NOT NULL,
  "firstname" varchar(255) NOT NULL,
  "lastname" varchar(255) NOT NULL,
  "email" varchar(128) NOT NULL,
  "phone" varchar(32),
  "username" varchar(128) NOT NULL,
  "password" varchar(255) NOT NULL,
  "role" varchar(255) NOT NULL,
  "status" enum(active,inactive) NOT NULL DEFAULT 'active',
  "access_token" varchar(255),
  "access_token_expired_at" timestamp,
  "email_verified_at" timestamp,
  "phone_verified_at" timestamp,
  "login_attempt" int NOT NULL DEFAULT 0,
  "last_successful_login" timestamp,
  "last_failed_login" timestamp,
  "created_at" timestamp NOT NULL,
  "updated_at" timestamp NOT NULL
);

CREATE TABLE "bk_siakad_students" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
  "uuid" varchar(255) UNIQUE PRIMARY KEY NOT NULL,
  "user_uuid" varchar(255) NOT NULL,
  "student_id" varchar(255) NOT NULL,
  "nim" varchar(255) NOT NULL,
  "nisn" varchar(255) NOT NULL,
  "nik" varchar(255) NOT NULL,
  "gender" enum(male,female) NOT NULL,
  "hobby" text,
  "topic_of_interest" text,
  "birthplace" varchar(255) NOT NULL,
  "birthdate" datetime NOT NULL,
  "address" text NOT NULL,
  "father_name" varchar(255) NOT NULL,
  "father_phone" varchar(32),
  "father_job" varchar(255),
  "father_salary" int DEFAULT 0,
  "mother_name" varchar(255) NOT NULL,
  "mother_phone" varchar(32),
  "mother_job" varchar(255),
  "mother_salary" int DEFAULT 0,
  "guardian_name" varchar(255),
  "guardian_phone" varchar(32),
  "guardian_job" varchar(255),
  "registered_at" timestamp,
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "bk_siakad_teachers" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
  "uuid" varchar(255) UNIQUE PRIMARY KEY NOT NULL,
  "user_uuid" varchar(255) NOT NULL,
  "teacher_id" varchar(255) NOT NULL,
  "nik" varchar(255) NOT NULL,
  "nip" varchar(255) NOT NULL,
  "nidn" varchar(255) NOT NULL,
  "npwp" varchar(255) NOT NULL,
  "address" text NOT NULL,
  "phone" varchar(32),
  "birthplace" varchar(255) NOT NULL,
  "birthdate" datetime NOT NULL,
  "created_at" timestamp NOT NULL,
  "updated_at" timestamp NOT NULL
);

CREATE TABLE "bk_siakad_classes" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
  "uuid" varchar(255) UNIQUE PRIMARY KEY NOT NULL,
  "name" varchar(255) NOT NULL,
  "description" text,
  "grade" varchar(255) NOT NULL,
  "teacher_uuid" varchar(255) NOT NULL,
  "status" enum(active,inactive) NOT NULL DEFAULT 'active',
  "created_at" timestamp NOT NULL,
  "updated_at" timestamp NOT NULL
);

CREATE TABLE "bk_siakad_subjects" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
  "uuid" varchar(255) UNIQUE PRIMARY KEY NOT NULL,
  "name" varchar(255) NOT NULL,
  "description" text,
  "grade" varchar(255) NOT NULL,
  "teacher_uuid" varchar(255) NOT NULL,
  "status" enum(active,inactive) NOT NULL DEFAULT 'active',
  "created_at" timestamp NOT NULL,
  "updated_at" timestamp NOT NULL
);

CREATE TABLE "bk_siakad_schedules" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
  "uuid" varchar(255) UNIQUE PRIMARY KEY NOT NULL,
  "class_uuid" varchar(255) NOT NULL,
  "subject_uuid" varchar(255) NOT NULL,
  "day" enum(monday,tuesday,wednesday,thursday,friday,saturday,sunday) NOT NULL,
  "start_time" time NOT NULL,
  "end_time" time NOT NULL,
  "status" enum(active,inactive) NOT NULL DEFAULT 'active',
  "created_at" timestamp NOT NULL,
  "updated_at" timestamp NOT NULL
);

CREATE TABLE "bk_siakad_attendances" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
  "uuid" varchar(255) UNIQUE PRIMARY KEY NOT NULL,
  "schedule_uuid" varchar(255) NOT NULL,
  "student_uuid" varchar(255) NOT NULL,
  "teacher_uuid" varchar(255) NOT NULL,
  "status" enum(present,absent,permission) NOT NULL DEFAULT 'present',
  "created_at" timestamp NOT NULL,
  "updated_at" timestamp NOT NULL
);

CREATE TABLE "bk_siakad_score_types" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" varchar(255) UNIQUE NOT NULL,
  "name" varchar(255) NOT NULL,
  "value" varchar(255) NOT NULL,
  "description" text,
  "status" enum(active,inactive) NOT NULL DEFAULT 'active',
  "created_at" timestamp NOT NULL,
  "updated_at" timestamp NOT NULL
);

CREATE TABLE "bk_siakad_score_conversion" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" varchar(255) UNIQUE NOT NULL,
  "name" varchar(255) NOT NULL,
  "value" varchar(255) NOT NULL,
  "description" text,
  "status" enum(active,inactive) NOT NULL DEFAULT 'active',
  "created_at" timestamp NOT NULL,
  "updated_at" timestamp NOT NULL
);

CREATE TABLE "bk_siakad_scores" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" varchar(255) UNIQUE NOT NULL,
  "student_uuid" varchar(255) NOT NULL,
  "subject_uuid" varchar(255) NOT NULL,
  "score_type_uuid" varchar(255) NOT NULL,
  "score_conversion_uuid" varchar(255) NOT NULL,
  "score" varchar(255) NOT NULL,
  "description" text,
  "status" enum(active,inactive) NOT NULL DEFAULT 'active',
  "created_at" timestamp NOT NULL,
  "updated_at" timestamp NOT NULL
);

CREATE TABLE "bk_siakad_education_fee_items" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" varchar(255) UNIQUE NOT NULL,
  "name" varchar(255) NOT NULL,
  "nominal" int NOT NULL,
  "description" text,
  "status" enum(active,inactive) NOT NULL DEFAULT 'active',
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "bk_siakad_education_fee_payments" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" varchar(255) UNIQUE NOT NULL,
  "student_uuid" varchar(255) NOT NULL,
  "education_fee_item_uuid" varchar(255) NOT NULL,
  "nominal" int NOT NULL,
  "description" text,
  "status" enum(paid,unpaid) NOT NULL DEFAULT 'unpaid',
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "bk_siakad_settings" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" varchar(255) UNIQUE NOT NULL,
  "name" varchar(255),
  "value" text,
  "status" enum(active,inactive) NOT NULL DEFAULT 'active',
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "bk_siakad_roles" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
  "uuid" varchar(255) UNIQUE PRIMARY KEY NOT NULL,
  "name" varchar(255),
  "description" text,
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "bk_siakad_menus" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
  "uuid" varchar(255) UNIQUE PRIMARY KEY NOT NULL,
  "name" varchar(255),
  "url" varchar(255),
  "icon" varchar(255),
  "parent_id" int,
  "created_at" timestamp,
  "updated_at" timestamp
);

CREATE TABLE "bk_siakad_user_access" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
  "uuid" varchar(255) UNIQUE PRIMARY KEY NOT NULL,
  "user_uuid" int,
  "role_uuid" int,
  "menu_uuid" int,
  "created_at" timestamp,
  "updated_at" timestamp
);

ALTER TABLE "bk_siakad_users" ADD FOREIGN KEY ("role") REFERENCES "bk_siakad_roles" ("uuid");

ALTER TABLE "bk_siakad_user_access" ADD FOREIGN KEY ("user_uuid") REFERENCES "bk_siakad_users" ("uuid");

ALTER TABLE "bk_siakad_user_access" ADD FOREIGN KEY ("role_uuid") REFERENCES "bk_siakad_roles" ("uuid");

ALTER TABLE "bk_siakad_user_access" ADD FOREIGN KEY ("menu_uuid") REFERENCES "bk_siakad_menus" ("uuid");

ALTER TABLE "bk_siakad_users" ADD FOREIGN KEY ("uuid") REFERENCES "bk_siakad_students" ("user_uuid");

ALTER TABLE "bk_siakad_users" ADD FOREIGN KEY ("uuid") REFERENCES "bk_siakad_teachers" ("user_uuid");

ALTER TABLE "bk_siakad_classes" ADD FOREIGN KEY ("teacher_uuid") REFERENCES "bk_siakad_teachers" ("uuid");

ALTER TABLE "bk_siakad_subjects" ADD FOREIGN KEY ("teacher_uuid") REFERENCES "bk_siakad_teachers" ("uuid");

ALTER TABLE "bk_siakad_schedules" ADD FOREIGN KEY ("class_uuid") REFERENCES "bk_siakad_classes" ("uuid");

ALTER TABLE "bk_siakad_schedules" ADD FOREIGN KEY ("subject_uuid") REFERENCES "bk_siakad_subjects" ("uuid");

ALTER TABLE "bk_siakad_attendances" ADD FOREIGN KEY ("schedule_uuid") REFERENCES "bk_siakad_schedules" ("uuid");

ALTER TABLE "bk_siakad_attendances" ADD FOREIGN KEY ("student_uuid") REFERENCES "bk_siakad_students" ("uuid");

ALTER TABLE "bk_siakad_attendances" ADD FOREIGN KEY ("teacher_uuid") REFERENCES "bk_siakad_teachers" ("uuid");

ALTER TABLE "bk_siakad_scores" ADD FOREIGN KEY ("student_uuid") REFERENCES "bk_siakad_students" ("uuid");

ALTER TABLE "bk_siakad_scores" ADD FOREIGN KEY ("subject_uuid") REFERENCES "bk_siakad_subjects" ("uuid");

ALTER TABLE "bk_siakad_scores" ADD FOREIGN KEY ("score_type_uuid") REFERENCES "bk_siakad_score_types" ("uuid");

ALTER TABLE "bk_siakad_scores" ADD FOREIGN KEY ("score_conversion_uuid") REFERENCES "bk_siakad_score_conversion" ("uuid");

ALTER TABLE "bk_siakad_education_fee_payments" ADD FOREIGN KEY ("student_uuid") REFERENCES "bk_siakad_students" ("uuid");

ALTER TABLE "bk_siakad_education_fee_payments" ADD FOREIGN KEY ("education_fee_item_uuid") REFERENCES "bk_siakad_education_fee_items" ("uuid");
